# GPU_Choquet_VideoForeground

./: README.md
gpu/: CMakeLists.txt  README.md
gpu/src/: benchmarks.cpp  benchmarks.h  utils.cpp  utils.h
gpu/src/cpu/: FuzzyChoquetIntegral.h  main.cpp
gpu/src/gpu/: VideoProcessingExecutor.cpp  VideoProcessingExecutor.h
gpu/src/optimized_cpu/: Image.cpp  Image.h  VideoProcessingExecutor.cpp
gpu/src/optimized_gpu/: FeaturesExtraction.cu  FeaturesExtraction.h  FuzzyChoquetIntegral.cu  Image.h  VideoProcessingExecutor.cpp  VideoProcessingExecutor.cu
src/cpu/: ChoquetIntegral.cpp  ChoquetIntegral.h  FeaturesExtraction.cpp  FeaturesExtraction.h  FuzzyChoquetIntegral.cpp  Image.cpp  Image.h  VideoProcessingExecutor.cpp
src/gpu/: FeaturesExtraction.cu  FuzzyChoquetIntegral.h  Image.cpp  Image.h  main.cpp
src/optimized_cpu/: FeaturesExtraction.cpp  FeaturesExtraction.h  FuzzyChoquetIntegral.cpp  FuzzyChoquetIntegral.h  main.cpp
src/optimized_gpu/: Image.cpp
